# motley_cue

./: .buildinfo  .bumpversion.cfg  .coverage  .env-template  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  API.md  CHANGELOG.md  Dockerfile  Dockerfile.build.centos.7  Dockerfile.build.centos.8  Dockerfile.build.debian  Dockerfile.build.debian.bullseye  Dockerfile.build.debian.buster  Dockerfile.build.debian.stretch  Dockerfile.build.debian.testing  Dockerfile.build.ubuntu.bionic  Dockerfile.build.ubuntu.focal  Dockerfile.build.ubuntu.xenial  LICENSE  Makefile  README.md  README.rst  api.html  build.sh  config_template.conf  configuration.html  development.html  docker-compose.yml  genindex.html  http-routingtable.html  index.html  installation.html  motley_cue.conf  objects.inv  pytest.ini  requirements.txt  run_tests.sh  running.html  (+9 more)
.doctrees/: api.doctree  configuration.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  running.doctree  ssh-integration.doctree  usage.doctree
.doctrees/configs/: feudal_adapter_conf.doctree  flaat.conf.doctree  gunicorn_conf.doctree  motley_cue_conf.doctree  motley_cue_env.doctree  motley_cue_service.doctree  nginx_motley_cue.doctree  templates.doctree
.github/workflows/: changelog-from-release.yml  ci.yml  mirror-repo.yml  publish-docs.yml  publish-to-pypi.yml
.gitlab-ci-scripts/: local-before-script.sh  set-prerel-version.sh  set-prerelease-version.sh
_sources/: configuration.rst.txt  development.rst.txt  installation.rst.txt  ssh-integration.rst.txt  usage.rst.txt
_sources/configs/: motley_cue_env.rst.txt  templates.rst.txt
_static/: alabaster.css  copybutton.js
configs/: feudal_adapter_conf.html  flaat.conf.html  gunicorn_conf.html  motley_cue_conf.html  motley_cue_env.html  motley_cue_service.html  nginx_motley_cue.html  templates.html
debian/: changelog  control  dirs  install  motley-cue.links  motley-cue.postinst  motley-cue.postrm  motley-cue.prerm  motley-cue.service  motley-cue.socket  motley-cue.triggers  rules
debian/patches/: logfiles  otp  series
debian/source/: options
doc/source/: api.rst  conf.py  configuration.rst  development.rst  index.rst  installation.rst  requirements.txt  running.rst  ssh-integration.rst  usage.rst
doc/source/_static/css/: custom.css  fonts.css
doc/source/_templates/: navigation.html
doc/source/api/: openapi.yml
doc/source/configs/: feudal_adapter_conf.rst  flaat.conf.rst  gunicorn_conf.rst  motley_cue_conf.rst  motley_cue_service.rst  nginx_motley_cue.rst
etc/: feudal_adapter.conf  flaat.conf  gunicorn.conf.py  motley-cue.service  motley_cue.conf  motley_cue.env  motley_cue.sudo  nginx.motley_cue  privacystatement.md
etc/init.d/: motley-cue
etc/templates/: admin.deploy.template  admin.deploy.update.template  admin.test.template  admin.update.template  unknown.template  user.deploy.template  user.deploy.update.template  user.update.template
motley_cue/: __main__.py  _version.py  api.py  dependencies.py  models.py  static.py  version.py
motley_cue/admin/: admin.py
motley_cue/api/: __init__.py  utils.py
motley_cue/api/api_v1/: __init__.py  admin.py  api.py  endpoints.py  root.py  user.py
motley_cue/api/api_v1/routers/: admin.py  user.py
motley_cue/api/v1/: __init__.py  admin.py  root.py  user.py
motley_cue/apis/v1/: admin.py  api.py  root.py  user.py
motley_cue/mapper/: __init__.py  authorisation.py  config.py  exceptions.py  local_user_management.py  token_manager.py  utils.py
motley_cue/routers/: admin.py  user.py
motley_cue/user/: user.py
rpm/: compile-semodules.sh  fix-venv-paths.sh  logfiles.patch  motley-cue.spec  motley-cue.spec.in
selinux/: README.md  motley-cue-gunicorn.pp  motley-cue-gunicorn.te  motley-cue-nginx.te  motley-cue-sshd.pp  motley-cue-sshd.te
testconf/: .env  .env.mo  Dockerfile  docker-compose.yml  motley_cue.conf.mo
testconf/etc/: motley_cue.conf  motley_cue.conf.mo
tests/: configs.py  conftest.py  test_api.py  test_authorisation.py  test_config.py  test_env.py  test_feudal_adapter.conf  test_local_user_manager.py  test_main.py  test_token_manager.py  utils.py
tests/configs/: motley_cue_egi_all.conf  motley_cue_noauthz.conf
