[metadata]
name = motley_cue
summary = Mapper Oidc To Local idEntitY with loCal User managEment
description-file = README.md
description-content-type = text/markdown; charset=UTF-8

author = Diana Gudu
author-email = gudu@kit.edu

home-page = https://github.com/dianagudu/motley_cue
project_urls =
    Bug Tracker = https://github.com/dianagudu/motley_cue/issues
    Documentation = https://github.com/dianagudu/motley_cue/blob/main/README.md

license = MIT 
license_file = LICENSE

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: System :: Systems Administration
    Topic :: System :: Systems Administration :: Authentication/Directory  
    Topic :: Utilities

# This creates a binary <bin-name> 
# that calls the function in <dir>/<module>:<function>
[options.entry_points]
console_scripts =
    motley_cue_uvicorn = motley_cue.__main__:main

[bdist_wheel]
universal = 1

[options]
install_requires =
    feudalAdapter
    flaat
    fastapi
    uvicorn[standard]
    gunicorn
package_dir=
    =.
packages=find:

[options.packages.find]
where=.

[options.data_files] # must go inside $DESTDIR/etc/motley_cue)
/etc/motley_cue/etc =
    etc/gunicorn.conf.py
    etc/motley_cue.env
    etc/motley_cue.conf
    etc/ldf_adapter.conf
