[metadata]
name = motley_cue
summary = Mapper Oidc To Local idEntitY with loCal User managEment
description_file = README.rst
description_content_type = text/x-rst; charset=UTF-8

author = Diana Gudu
author_email = gudu@kit.edu

home_page = https://github.com/dianagudu/motley_cue
project_urls =
    Bug Tracker = https://github.com/dianagudu/motley_cue/issues
    Documentation = https://motley-cue.readthedocs.io

license = MIT 
license_file = LICENSE

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: System :: Systems Administration
    Topic :: System :: Systems Administration :: Authentication/Directory  
    Topic :: Utilities

# This creates a binary <bin-name> 
# that calls the function in <dir>/<module>:<function>
[options.entry_points]
console_scripts =
    motley_cue_uvicorn = motley_cue.__main__:main

[options]
install_requires =
    feudalAdapter>=0.5.3
    flaat>=1.1.5
    fastapi==0.*
    uvicorn[standard]==0.*
    gunicorn==20.*
    sqlitedict==2.*
    cryptography==37.*
package_dir=
    =.
packages=find:

[files]
packages =
    motley_cue
data_files =
    etc/motley_cue =
        etc/motley_cue.env
        etc/motley_cue.conf
        etc/feudal_adapter.conf
    etc/motley_cue/templates = etc/templates/*
    etc/gunicorn = etc/gunicorn.conf.py
    etc/nginx = etc/nginx.motley_cue
    etc/systemd/system = etc/motley-cue.service
    usr/share/motley-cue/selinux =
        selinux/motley-cue-gunicorn.te
        selinux/motley-cue-nginx.te
        selinux/motley-cue-sshd.te
        selinux/README.md

[bdist_wheel]
universal = 1
