[metadata]
name = motley_cue
version = file: motley_cue/VERSION
summary = Mapper Oidc To Local idEntitY with loCal User managEment
description = Mapper Oidc To Local idEntitY with loCal User managEment
long_description = file: README.rst
long_description_content_type = text/x-rst

author = Diana Gudu
author_email = gudu@kit.edu

home_page = https://github.com/dianagudu/motley_cue
project_urls =
    Bug Tracker = https://github.com/dianagudu/motley_cue/issues
    Documentation = https://motley-cue.readthedocs.io

license = MIT 
license_files = [LICENSE]

classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: System :: Systems Administration
    Topic :: System :: Systems Administration :: Authentication/Directory  
    Topic :: Utilities

# This creates a binary <bin-name> 
# that calls the function in <dir>/<module>:<function>
[options.entry_points]
console_scripts =
    motley_cue_uvicorn = motley_cue.__main__:main

[options]
install_requires =
    feudalAdapter>=0.7.3
    flaat>=1.1.18
    fastapi==0.*
    uvicorn[standard]==0.*
    gunicorn==22.*
    sqlitedict==2.*
    cryptography==43.0.1
    markdown==3.*
    pydantic-settings==2.*
    pydantic==2.*
package_dir=
    =.
packages=find:
include_package_data=True

[options.package_data]
motley_cue =
    VERSION

[options.data_files]
etc/motley_cue =
    etc/motley_cue.env
    etc/motley_cue.conf
    etc/feudal_adapter.conf
    etc/privacystatement.md
etc/motley_cue/templates = etc/templates/*
etc/gunicorn = etc/gunicorn.conf.py
etc/nginx = etc/nginx.motley_cue
etc/systemd/system = etc/motley-cue.service
etc/init.d = etc/init.d/motley-cue
bin/ = etc/bin/motley-cue
usr/share/motley-cue/selinux =
    selinux/motley-cue-gunicorn.te
    selinux/motley-cue-nginx.te
    selinux/motley-cue-sshd.te
    selinux/README.md

[bdist_wheel]
universal = 1
